Removed request and voting quotes for entries
